# linux-kernel-tasks

./: .gitignore
task1/: .gitignore  CMakeLists.txt
task1/demo/: CMakeLists.txt  main.c  main.cc
task1/mypthreads/: CMakeLists.txt  mypthreads.c  mypthreads.cc  mypthreads.h
